--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-header></app-header>
-@if (showList) {
-<app-video-list></app-video-list>
-} @else {
-<app-empty></app-empty>
-}
+
+<router-outlet></router-outlet>
