--- a/src/app/video-list/video-list.component.html
+++ b/src/app/video-list/video-list.component.html
@@ -1,13 +1,13 @@
 <nz-list nzBordered>
-  @for (video of videos; track video) {
+  @for (video of videos; track video; let idx = $index) {
   <nz-list-item>
     <nz-list-item-meta nzDescription="{{ video.date }}">
       <nz-list-item-meta-title>
-        <a href="https://ng.ant.design">{{ video.location | capitalize }}</a>
+        <a>{{ video.location | capitalize }}</a>
       </nz-list-item-meta-title>
     </nz-list-item-meta>
 
-    <a (click)="goToVideoDetails(video.video_file)">More details</a>
+    <a (click)="goToVideoDetails(video.video_file, idx)">More details</a>
   </nz-list-item>
   } @if (videos.length === 0) {
   <nz-list-empty />
