--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -97,7 +97,7 @@
     } @if (!inputVisible) {
     <nz-tag class="editable-tag" nzNoAnimation (click)="showInput()">
       <nz-icon nzType="plus" nzTheme="outline" />
-      Nueva palabra clave
+      New keyword
     </nz-tag>
     } @else {
     <input
